// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animationDuration renders 0 1`] = `
Array [
  .c0 {
  -webkit-animation-duration: 0;
  animation-duration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: 0;
  animation-duration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: 0;
  animation-duration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: 0;
  animation-duration: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders function 1`] = `
Array [
  .c0 {
  -webkit-animation-duration: hasnot;
  animation-duration: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: has;
  animation-duration: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: hasnot;
  animation-duration: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: has;
  animation-duration: has;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-duration: invalid.path.1;
  animation-duration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: invalid.path.1;
  animation-duration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: invalid.path.1;
  animation-duration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: invalid.path.1;
  animation-duration: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders negative number 1`] = `
Array [
  .c0 {
  -webkit-animation-duration: -54881;
  animation-duration: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: -54881;
  animation-duration: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: -42365;
  animation-duration: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: -42365;
  animation-duration: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: July;
    animation-duration: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: August;
    animation-duration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: September;
    animation-duration: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-duration: November;
    animation-duration: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: July;
    animation-duration: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: August;
    animation-duration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: September;
    animation-duration: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-duration: November;
    animation-duration: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: May;
    animation-duration: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: June;
    animation-duration: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: April;
    animation-duration: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-duration: November;
    animation-duration: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: May;
    animation-duration: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: June;
    animation-duration: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-duration: April;
    animation-duration: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-duration: November;
    animation-duration: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-animation-duration: July;
    animation-duration: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: August;
    animation-duration: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-duration: September;
    animation-duration: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: November;
    animation-duration: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-duration: August;
    animation-duration: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-animation-duration: July;
    animation-duration: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: August;
    animation-duration: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-duration: September;
    animation-duration: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: November;
    animation-duration: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-duration: August;
    animation-duration: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-duration: January;
    animation-duration: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: December;
    animation-duration: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-duration: April;
    animation-duration: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: May;
    animation-duration: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-duration: June;
    animation-duration: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-duration: January;
    animation-duration: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: December;
    animation-duration: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-duration: April;
    animation-duration: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-duration: May;
    animation-duration: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-duration: June;
    animation-duration: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-animation-duration: 54881;
  animation-duration: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: 54881;
  animation-duration: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: 42365;
  animation-duration: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: 42365;
  animation-duration: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders string 1`] = `
Array [
  .c0 {
  -webkit-animation-duration: July;
  animation-duration: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: July;
  animation-duration: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: June;
  animation-duration: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: June;
  animation-duration: June;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDuration renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-duration: DarkSlateBlue;
  animation-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: DarkSlateBlue;
  animation-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: DarkSlateBlue;
  animation-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-duration: DarkSlateBlue;
  animation-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
